--- a/widget.html
+++ b/widget.html
@@ -4,8 +4,8 @@
 <div>
    <h1>slides</h1>
     <ul>
-    {{#each slides}}
-        <li>{{@key}}: {{displayTitle}}</li>
+    {{#each slides as |slide slideId| }}
+        <li>{{slideId}}: {{displayTitle}}</li>
     {{/each}}
     </ul>
 
